Prevent too large clicking area

--- a/components/_global-nav.scss
+++ b/components/_global-nav.scss
@@ -106,6 +106,7 @@ $global-navigation-background-colour: $colour-green !default;
 
 			&#user-menu-trigger {
 				cursor: default;
+				overflow: hidden;
 
 				&:before {
 					content: "#{$glyph-user}";
